web interface with metrics and graphic
